app/assets/stylesheets/application.css
  /*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "./actiontext.css";

:root { /* defining root styling */   
	--bg-color:linear-gradient(180deg, #f8f9fb 0%, #e5eaef 80%) fixed; /* 1st color starts at the very beginning of the gradient. The 2nd goes from 80% to the rest of the page. The degrees define the direction of the gradient */
	--font-color: #574e47;
	--font-family: "Inter", sans-serif;
	--font-size-title: 1.2rem;
	--font-size-body: 1.1rem;
	--font-size-detail: 0.9rem;
	--input-field-bg-color: #f0f0f0;
}

/* app/assets/stylesheets/application.css */

trix-editor {
	background-color: #e7eaed; /* Change this to your desired background color */
	border: solid #e2dede; /* Creating a border for each individual comment boddy */
	border-radius: 5px; /* Optional: add rounded corners */
	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.05);
	padding: 1rem 0.5rem; /* Optional: add some padding for better appearance */
	margin: 0.5rem 0;
}

trix-toolbar .trix-button-group button { 
	background-color: #e5ebee; /* changes the trix editor button colors (default is black and so with current background color they "disappear"*/
	border: none;
}

.inline-form {
	display: inline;
	margin: 0;
	padding: 0;
}

.button-link {
	display: inline-block;
	background: none;
	border: none;
	padding: 0;
	font: inherit;
	color: inherit;
}

.button-link:hover {
	text-decoration: underline;
	cursor: pointer;
}

.button input[type="submit"],
.close-button,
.cancel-button {
	background-color: #c7ccce;
	border-radius: 10%;
	border: none;
	padding: 0.5rem;
	margin: 0.5rem 0.5rem 0.5rem 0;    
	font-size: inherit;
	color: var(--font-color);
}

.close-modal-button {
	background-color: #c7ccce;
	border-radius: 10%;
	border: none;
	padding: 0.5rem;
	margin-top: 2rem !important;    
	font-size: inherit;
}

.button input[type="submit"]:hover {
	cursor: pointer; /* turns the cursor to a pointer whenever it hovers over the button */
}

* { /* resetting browser default setting */
	box-sizing: border-box; /* keeps the original width and height when adding padding and margin */
	margin: 0; 
	padding: 0;
	text-decoration: none; /* removes the underline of all the hyperlinks */
}

a {
	color: var(--font-color); /* makes sure that any link that is clicked on does not change color afterwards */
}

.separator {
	border: none; /* Remove the default border */
	border-top: 1px solid #ccc; /* A thin, solid line */
	width: 100%; /* Make it span the width of the container */
}

.comments-separator {
	display: flex;
	align-items: center;
	width: 100%;
	margin: 1rem 0; /* Adjust vertical spacing as needed */
}

.comments-separator::before,
.comments-separator::after {
	content: ''; /* required for pseudo-elements to display */
	flex: 1; /* allows the lines to stretch and fill the available space */
	border-bottom: 2px solid #ccc; /* Line color and thickness */
}

.comments-separator::before {
	margin-right: 1rem; /* Space between line and date */
}

.comments-separator::after {
	margin-left: 1rem; /* Space between date and line */
}

.comments-separator span {
	white-space: nowrap; /* Prevent the date from wrapping */
	color: #666; /* Text color */
}

.page-title {
	text-align: center;
	margin: 2rem 2rem 0.5rem 2rem;
}

.comments-modal-title {
	text-align: center;
	margin: 1rem 2rem 2rem 2rem;
}

.project-show-dates,
.project-department,
.comments-timeline-description,
.projects-timeline-description  {
	text-align: center;
	padding: 0 1rem 0.5em 1rem; 
	font-size: 0.9rem;
}

.project-timeline-dates,
.comments-timeline-weekly-description,
.start-date-filter-detail,
.department-filter-detail {
	font-size: 0.8rem;
	margin: 0.3rem 0 1rem 0;
	font-weight: normal;
}

.project-description {
	list-style: none;
	text-align: center;
	margin: 1.5rem auto;
	font-size: 0.9rem;
	width: 60%; 
}

.project-actions {
	text-align: center;
	padding: 0 1rem 1.5rem 1rem;
	font-size: 1rem;
}

.project-actions a:hover {
	text-decoration: underline;
}

.project-show-comments {
	padding: 2rem 0;
}

.projects-filters{
	margin-top: 2rem;
}

.new-project-prompt {
	list-style: none;
	text-align: center;
	margin: 1rem 2rem 2rem 2rem;
}

.new-project-prompt a:hover {
	text-align: center;
	background-color: #e5ebee;
	border-radius: 50px;
	border: none;
	cursor: pointer; /* turns the cursor to a pointer whenever it hovers over the button */
	transition: all 0.3s ease 0s; /* how long it takes to transition the pointer type */
	padding: 1rem;
}

.project-comment {
	margin: 1rem 0 0;
}

.highlighted-projects-grid,
.projects-grid {
	display: grid; /* Defining the display as grid */
	grid-template-columns: repeat(5, 1fr); /* Declaring how many columns I need and making sure they're equal size */ 
	gap: 1.5rem; /* Adding gap between grid cells */ 
	margin: 1.5rem; /* Adding margin (spacing on the outside of the whole grid) */ 
}

.recent-projects-grid,
.due-soon-projects-grid,
.past-due-projects-grid {
	display: grid; /* Defining the display as grid */
	grid-template-columns: 1fr; /* Declaring that the grid will have only 1 column */
	grid-template-rows: 1fr; /* Declaring that the grid will have only 1 row */
	gap: 1.5rem;
	margin: 1.5rem; /* Adding margin (spacing on the outside of the whole grid) */
}
/* ... */

